--- a/public/style.css
+++ b/public/style.css
@@ -38,6 +38,10 @@
 @import url(css/default/lineicons.min.css);
 /* Reboot CSS */
 
+.modal-backdrop{
+    width: 100%;
+    height: 100%;}
+
 ::-webkit-scrollbar {
     width: 10px;
 }
