--- a/public/style.css
+++ b/public/style.css
@@ -1450,11 +1450,11 @@ li.suha-dropdown-menu {
     z-index: 10; }
   .top-product-card .wishlist-btn {
     position: absolute;
-    top: 1rem;
-    left: 1rem;
+    top: 0.3rem;
+    left: 0.3rem;
     z-index: 10;
     color: #ea4c62;
-    font-size: 1.25rem;
+    font-size: 1.3rem;
     line-height: 1; }
   .top-product-card .product-thumbnail {
     text-align: center; }
@@ -1488,13 +1488,12 @@ li.suha-dropdown-menu {
       margin: 5px 0px;}
     .top-product-card .product-rating i {
       margin: 0px 1px; }
-  .top-product-card .btn {
+  .top-product-card .btn.text-white {
     padding: 0;
     border-radius: 50%;
     width: 30px;
     height: 30px;
     text-align: center;
-    line-height: 35px;
     position: absolute;
     left: 12px;
     bottom: 12px;
@@ -1527,8 +1526,7 @@ li.suha-dropdown-menu {
       right: 0.5rem; }
     .weekly-product-card .product-thumbnail-side .wishlist-btn {
       position: absolute;
-      bottom: 0.5rem;
-      right: 0.5rem;
+      bottom: 0;
       color: #ea4c62;
       line-height: 1;
       z-index: 11;
