--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -35,7 +35,7 @@
 @import '~animate.css/animate.css';
 @import '~owl.carousel2/dist/assets/owl.carousel.min.css';
 //@import '~font-awesome/css/font-awesome.min.css';
-//@import url(css/default/lineicons.min.css);
+@import 'resources/LineIcons-Package-2.0/scss/main.scss';
 /* Reboot CSS */
 .owl-carousel{
     direction: ltr;
@@ -107,7 +107,7 @@
   padding: 0; }
   @font-face {
     font-family: iransans;
-    src: url('./fonts/IRANSansWeb(FaNum).ttf');
+    src: url('../fonts/IRANSansWeb(FaNum).ttf');
 }
 body,
 html {
@@ -713,7 +713,7 @@ div.paginate-loading{
     .preview-iframe-wrapper .preview-hero-area::after {
       position: absolute;
       content: "";
-      background-image: url(img/curve.png);
+      background-image: url(../img/curve.png);
       bottom: 50px;
       width: 142px;
       height: 121px;
@@ -752,7 +752,7 @@ div.paginate-loading{
           position: absolute;
           width: 200px;
           height: 200px;
-          background-image: url(img/core-img/dot-blue.png);
+          background-image: url(../img/core-img/dot-blue.png);
           background-repeat: repeat;
           bottom: -70px;
           right: -70px;
@@ -2616,7 +2616,7 @@ li.suha-dropdown-menu {
   .product-title-meta-data::after {
     position: absolute;
     content: "";
-    background-image: url(img/curve.png);
+    background-image: url(../img/curve.png);
     top: -120px;
     width: 142px;
     height: 121px;
@@ -3745,7 +3745,7 @@ li.suha-dropdown-menu {
   [data-theme="dark"] .weekly-product-card .product-thumbnail-side .delete-btn {
     color: #020310; }
   [data-theme="dark"] .product-title-meta-data::after {
-    background-image: url(img/curve2.png); }
+    background-image: url(../img/curve2.png); }
   [data-theme="dark"] .top-product-card .wishlist-btn {
     color: #ea4c62; }
   [data-theme="dark"] .category-card i {
